*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.4 ===
* Reduced CPU consumption.
* Reduced the rate of the gain curve update.

=== 1.0.3 ===
* Updated build scripts and dependencies.

=== 1.0.2 ===
* Updated build scripts and dependencies.

=== 1.0.1 ===
* Implemented Linear Phase mode.
* Updated build scripts and dependencies.

=== 1.0.0 ===
* Initial release.
